# Genesis-1.3-Version4

./: .gitignore  CHANGELOG.md  CHANGELOG_DEV.md  CMakeLists.txt  CMakeLists.txt.local  CONTRIBUTING.md  DEVELOPMENT.md  MANUAL.md  MANUAL_INSTALLATION.md  MANUAL_LATTICE.md  MANUAL_MAIN.md  Makefile  README.md  all.cpp  build_info.sh  git-hash.cmake
.github/: genesis4-build-env-mpich.yaml  genesis4-build-env-openmpi.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-reporting.md
.github/scripts/: build.sh  run_tests.sh
.github/workflows/: build.yaml  build_dpi.yaml  conda-build.yml  gh-pages.yml
benchmark/Benchmark1-SASE/: Aramis.in  Aramis.lat  Benchmark.out.h5
benchmark/Benchmark2-OpticalKlystron/: Athos.in  Athos.lat  Athos_SS.in  Benchmark.out.h5
benchmark/Benchmark2-OpticalKlystron/scorep-20210420_1108_14272804966331812/: MANIFEST.md  profile.cubex  scorep.cfg
benchmark/Benchmark3-EEHG/: FERMI.in  FERMI.lat
benchmark/Benchmark4-UndErrors/: Aramis.in
benchmark/harmonics/: Gen3Harm1.in  Gen3Harm1.lat  Harm1.in  Lattice.lat
benchmark/time-dependent/: Lattice.lat  Tilt.in
benchmark/undulator/: Chicane.in  Chicane.lat  Lattice.lat  TGU.in
examples/: README.md
examples/Example1-SteadyState/: Example1.in  Example1.py  README.md  TEST_power.py
examples/Example2-Dumps/: Example2.in  Example2.lat  Example2.md  Example2.py
examples/Example2-Dumps/Plots/: Animation1.webm  Animation2.webm
examples/Example3-TimeDependent/: Example3.in  Example3.lat  Example3.py  README.md
examples/Example4-HGHG/: Example4.lat  Example4.py  Example4_a.in  Example4_b.in  README.md
include/: AlterBeam.h  AlterLattice.h  AlterSetup.h  Beam.h  Beam.h~  BeamDiag.h  BeamDiag_Demo.h  BeamDiag_HDF5helper.h  BeamDiag_Std.h  BeamShaping.h  BeamSolver.h  BesselJ.h  Collective.h  Control.h  Diagnostic.h  DiagnosticBase.h  DiagnosticHook.h  DiagnosticHookS.h  DiagnosticHook_V.h  DiagnosticPlugin.h  EField.h  EField.h~  EFieldSolver.h  FFTObj.h  Field.h  Field.h~  FieldManipulator.h  FieldSolver.h  FieldSolverADI.h  FieldSolverFFT.h  GaussHermite.h  GenProfile.h  GenTime.h  Gencore.h  HDF5_cwc.h  HDF5base.h  Hammerslay.h  ImportBeam.h  ImportBeam.h~  ImportField.h  (+57 more)
manual/: Genesis-Manual.aux  Genesis-Manual.tex  Genesis-Manual.toc  INSTALLATION.md  LATTICE.md  MAIN_INPUT.md  MANUAL.md  README.md  XGENESIS.md  generate_manual.sh  manual.tex  modular_beam_diag.txt
manual/build_notes/ubuntu_22.04/: README.md  notes.md
misc/plugin_demo/: CMakeLists.txt  DiagBeamHookedDemo.cc  DiagBeamHookedDemo.h  DiagFieldPowerDemo.cc  DiagFieldPowerDemo.h  DiagFieldPowerDemo_Test.cc  DiagUtil.cc  DiagUtil.h  DiagnosticHookS.h  DiagnosticHook_V.h  DiagnosticPlugin.h  README.md  power_demo_compare.py
misc/plugin_testbench/: CMakeLists.txt  README.md  demo_params.txt  g4_tb.cpp  g4_tb_util.cpp  g4_tb_util.h
misc/profile_demo/: t.in  t.lat
postprocessor/matlab/: xgeninput.m  xgenplot.m  xgenreaddataset.m
sdds2hdf/: sdds2hdf-dist-unix.sh  sdds2hdf-dist-unix.sh~
src/Core/: Beam.cpp  Beam.cpp~  BeamDiag.cpp  BeamDiag_Demo.cpp  BeamDiag_HDF5helper.cpp  BeamDiag_Std.cpp  BeamSolver.cpp  Collective.cpp  Control.cpp  Control.cpp~  Diagnostic.cpp  DiagnosticHook.cpp  DiagnosticHookBeam.cpp  DiagnosticHookLI.cpp  DiagnosticUser.cpp  EField.cpp~  EFieldSolver.cpp  Field.cpp  Field.cpp~  FieldSolver.cpp  FieldSolverADI.cpp  FieldSolverFFT.cpp  Gencore.cpp  Incoherent.cpp  Incoherent.cpp~  TrackBeam.cpp  Undulator.cpp  Undulator.cpp~  field.cmn  genesis.def  magnet.cmn  particle.cmn  partsim.f.old
src/IO/: HDF5Beam.cpp  HDF5_cwc.cpp  HDF5base.cpp  MPEProfiling.cpp  Output.cpp  Output.cpp~  SDDSBeam.cpp  SDDSBeam.cpp~  readBeamHDF5.cpp  readBeamHDF5.cpp~  readFieldHDF5.cpp  readFieldHDF5.cpp~  readMapHDF5.cpp  writeBeamHDF5.cpp  writeFieldHDF5.cpp  writeFieldHDF5.cpp~  writeWakeHDF5.cpp
src/Lattice/: AlterLattice.cpp  Lattice.cpp  LatticeParser.cpp  Optics.cpp  ParseLattice.cpp
src/Loading/: GenProfile.cpp  ImportBeam.cpp  ImportBeam.cpp~  ImportField.cpp  ImportTransformation.cpp  LoadBeam.cpp  LoadField.cpp  Profile.cpp  QuietLoading.cpp  Seq2.cpp  Sequence.cpp  Series.cpp  SeriesManager.cpp  SeriesParser.cpp  ShotNoise.cpp
src/Main/: AlterBeam.cpp  AlterSetup.cpp  BeamShaping.cpp  Dump.cpp  Dump.cpp~  EField.cpp  FieldManipulator.cpp  GenMain.cpp  GenTime.cpp  Parser.cpp  Prof.cpp  RegPlugin.cpp  Setup.cpp  SponRad.cpp  Time.cpp  Track.cpp  VersionInfo.cpp  Wake.cpp  main.cpp  maincore.cpp  mainwrap.cpp
src/Util/: BesselJ.cpp  FFTObj.cpp  GaussHermite.cpp  Hammerslay.cpp  Inverfc.cpp  RandomU.cpp  SemaFile.cpp  SimpleHandshake.cpp  Sorting.cpp  StringProcessing.cpp
xgenesis/: xgenfield.m  xgeninit.m  xgenlattice.m  xgenplot.m  xgenwigner.m  xgenwigner2.m
